# ds4viz

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  ds4viz.sln  opencode.json  效果示例.md
.archived/: README.md
.archived/compilers/: README.md
.archived/compilers/text/: ds4vizc.nimble
.archived/libraries/: README.md
.archived/libraries/javascript/: README.md  ds4viz.js
.archived/libraries/lua/: README.md
.archived/libraries/nim/: nim.nimble
.archived/libraries/php/: README.md
.archived/libraries/rust/: Cargo.toml  README.md
.archived/libraries/rust/src/: error.rs  prelude.rs
.archived/libraries/rust/src/structures/: base.rs  linear.rs  mod.rs
.archived/libraries/rust/src/trace/: model.rs
.archived/libraries/rust/src/writer/: mod.rs  toml_writer.rs
.archived/libraries/rust/tests/: intergration.rs
.archived/libraries/typescript/: README.md  package.json
.archived/renderers/: README.md
.archived/renderers/simp-web/: simp-web.css
.archived/renderers/tui/: README.md
.archived/server/: README.md
.archived/server/demo/: README.md  ds4viz.db  server.lua
compiler/text/: README.md
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  manage.sh  nginx.conf
document/: IR定义.md  二开快速上手.md  在线服务部署.md  开发交接.md
prompt/: IR定义.md  Pegasus使用文档.md  不同级别用户权限.md  图标.md  复刻库.md  库基.md  库测试.md  服务系统.md  架构图生成.md  需求文档.md
render/cli/: README.md  cli.nimble
render/simp-web/: README.md  simp-web.css  simp-web.html  simp-web.js
render/simp-web/prompt/: 样式设计.md  页面设计.md
render/simp-web/test-toml-ir/: bst.1.toml  bst.2.toml  bst.3.toml  (+13 more)
render/vue/: README.md  env.d.ts  index.html  package-lock.json  package.json  trace.toml  vite.config.ts  vitest.config.ts
server/: README.md
server/demo/: README.md  server.lua
server/release/: Cargo.toml  README.md  dump.py
server/release/admin-repl/: README.md  admin-repl.ini  admin-repl.lua
server/release/admin-tui/: README.md  admin-tui.ini  admin-tui.lua
server/release/configs/: default.toml
server/release/docs/: API参考.md  API定义.md  数据库环境准备.md  编码规范.md  表定义.md
server/release/prompts/: 服务系统.md  编码规范.md  表定义.md
server/release/sql/: init.sql  templates.sql
server/release/src/: __init__.py  app.rs  auth.rs  cache.rs  config.py  config.rs  database.py  db.rs  error.rs  exceptions.py  executions.rs  lib.rs  log.py  main.py  main.rs  model.rs  quota.rs  templates.rs  utils.py
server/release/src/api/: __init__.py  auth.py  execution.py  template.py  user.py
server/release/src/config/: docker.yml  prod.yml  test.yml
server/release/src/model/: __init__.py  common.py  execution.py  template.py  user.py
server/release/src/sandbox/: mod.rs  systemd.rs  utils.rs
server/release/src/sandbox/languages/: common.rs  lua.rs  mod.rs  python.rs  rust.rs
server/release/src/service/: __init__.py  auth_service.py  execution_service.py  sandbox_service.py  template_service.py  user_service.py
server/release/test/: conftest.py  function_test.py  stress_test.py
temp/: pydemo.py
(+149 files in other folders)
