[package]
name = "ds4viz-server"
version = "0.1.0"
edition = "2021"
authors = ["WaterRun"]
description = "ds4viz 在线代码执行服务"
repository = "https://github.com/waterrun/ds4viz"
license = "MIT"
rust-version = "1.75"

[dependencies]
# Web 框架
poem = { version = "3", features = ["cookie", "multipart"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置
toml = "0.8"

# 认证
jsonwebtoken = "9"

# 密码哈希
argon2 = "0.5"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 哈希计算
sha2 = "0.10"
hex = "0.4"

# 错误处理
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true