[package]
name = "ds4viz"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["WaterRun <linzhuangrun49@gmail.com>"]
description = "ds4viz 的 Rust 支持：可扩展的数据结构可视化教学平台库"
documentation = "https://github.com/Water-Run/ds4viz#readme"
repository = "https://github.com/Water-Run/ds4viz.git"
homepage = "https://github.com/Water-Run/ds4viz"
license = "MIT"
keywords = ["data-structure", "visualization", "algorithm", "education", "toml"]
categories = ["visualization", "development-tools", "data-structures"]
readme = "README.md"

[dependencies]
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
